[gd_scene load_steps=6 format=3 uid="uid://b3kuc1ycswvs0"]

[ext_resource type="Script" uid="uid://85v4vhyipnke" path="res://player.gd" id="1_sweqy"]
[ext_resource type="Texture2D" uid="uid://cbrakq0hchgqd" path="res://kenney_animal-pack-redux/PNG/Round/panda.png" id="2_i3pqv"]
[ext_resource type="Texture2D" uid="uid://c8il4qwgypv4u" path="res://kenney_animal-pack-redux/PNG/Round without details/panda.png" id="3_hqtel"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dw050"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_i3pqv")
}, {
"duration": 1.0,
"texture": ExtResource("3_hqtel")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_i3pqv")
}, {
"duration": 1.0,
"texture": ExtResource("3_hqtel")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_i3pqv"]
radius = 32.0

[node name="Panda" type="Area2D"]
script = ExtResource("1_sweqy")
metadata/_edit_group_ = true

[node name="PandaAnimation" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_dw050")
animation = &"walk"

[node name="CollisionShapePanda" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_i3pqv")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
